Added some code on my html file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Practice</title>
+    <link rel="stylesheet" href="main.css">
     </head>
 <body>
+    <h1>Git Practice</h1>
+    <p>
+        It is a version control system that allows you to:
+        <ol>
+            <li>Track changes to their codebase</li>
+            <li>Collaborate with others on the same project</li>
+            <li>Back up your work and revert back in case of errors or mistakes.</li>
+        </ol>
+    </p>
 </body>
 </html>
