--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="main.css">
     </head>
 <body>
-    <h1>Git Practice</h1>
-    <p>
+    <h1 id="header"> Git Practice</h1>
+    <p id="paragraph">
         It is a version control system that allows you to:
-        <ol>
+        <ol id="list">
             <li>Track changes to their codebase</li>
             <li>Collaborate with others on the same project</li>
             <li>Back up your work and revert back in case of errors or mistakes.</li>
